# odysseus

./: .gitignore  README.md  WINDOWS-PORTABLE.md  launch-windows.bat  package-lock.json  package.json
.github/workflows/: windows-portable.yml
desktop/: index.html
scripts/: package-windows-portable.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python-shims/: fcntl.py  pty.py
src-tauri/src/: lib.rs  main.rs
